Attempt to fix bug with copying on mobile

--- a/main.css
+++ b/main.css
@@ -106,7 +106,7 @@ body {
     transform: translateX(00%);
 /*    width: 1px;*/
     height: auto;
-    z-index: -1;
+    /*z-index: -1;*/
     outline: none;
 }
 .tooltip {
